# payd

./: .gitignore  setup.cfg
payd/: client.py  models.py
